Implements apartment management features.
Adds Apartment entity and related CRUD operations.
Introduces ApartmentController, Service, Repository, DTOs.
Updates BuildingService to auto-create apartments.
Updates ResidentService to assign residents to apartments.
Updates API examples with Apartment endpoints.

Fixes issue where apartments were not being created automatically
and residents could not be assigned to apartments.